--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,12 @@
 /* http://kevinburke.bitbucket.org/markdowncss/markdown.css*/
 
+/*font for nav*/
+@import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
+
 body{
     margin: 0 auto;
-    font-family: "Helvetica Neue", Georgia, Palatino, serif;
+    font-family: "Montserrat", "Helvetica Neue", Georgia, Palatino, serif;
+    font-weight: 400;
     color: #aaa;
     line-height: 1;
     max-width: 960px;
@@ -270,7 +274,8 @@ button::-moz-focus-inner {
 nav {
   padding: 0 0 18px 0;
   border-bottom: 3px solid #bbb;
-  font-family: "Helvetica Neue", arial, sans-serif;
+  font-family: "Montserrat","Helvetica Neue", arial, sans-serif;
+  font-weight: 700;
   font-size: 28px;
 }
 nav a:first-child {
