--- a/css/main.css
+++ b/css/main.css
@@ -2,286 +2,294 @@
 
 /*font for nav*/
 @import url(http://fonts.googleapis.com/css?family=Montserrat:400,700);
-
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
 body{
-    margin: 0 auto;
-    font-family: "Montserrat", "Helvetica Neue", Georgia, Palatino, serif;
-    font-weight: 400;
-    color: #aaa;
-    line-height: 1;
-    max-width: 960px;
-    padding: 30px;
-    background: url('../img/cctv-banner-1.png') no-repeat black fixed;
+  margin: 0 auto;
+  font-family: "Montserrat", "Helvetica Neue", Georgia, Palatino, serif;
+  font-weight: 400;
+  color: #aaa;
+  line-height: 1;
+  max-width: 960px;
+  padding: 30px;
+  background: url('../img/cctv-banner-1.png') no-repeat black fixed;
 }
 h1, h2, h3, h4 {
-    color: #111111;
-    font-weight: 400;
+  color: #fff001;
+  font-weight: 400;
 }
 h1, h2, h3, h4, h5, p {
-    margin-bottom: 24px;
-    padding: 0;
-}
-h1 {
-    font-size: 48px;
-}
-h2 {
-    font-size: 36px;
-    /* The bottom margin is small. It's designed to be used with gray meta text
-     * below a post title. */
-    margin: 24px 0 6px;
+  margin-bottom: 24px;
+  padding: 0;
 }
 h3 {
+  border-left: 5px solid #444;
+  padding: 5px 12px;
+}
+h1 {
+  font-size: 48px;
+}
+h2 {
+  font-size: 36px;
+    /* The bottom margin is small. It's designed to be used with gray meta text
+    * below a post title. */
+    margin: 24px 0 6px;
+  }
+  h3 {
     font-size: 24px;
-}
-h4 {
+  }
+  h4 {
     font-size: 21px;
-}
-h5 {
+  }
+  h5 {
     font-size: 18px;
-}
-a {
+  }
+  a {
     /*color: #444;*/
     color: #fff001;
     margin: 0;
     padding: 0;
     vertical-align: baseline;
     text-decoration: none;
-}
-a:hover {
+  }
+  a:hover {
     text-decoration: none;
     color: #ff6600;
-}
-ul, ol {
+  }
+  ul, ol {
     padding: 0;
     margin: 0;
-}
-li {
+  }
+  li {
     line-height: 24px;
     list-style-type: none;
-}
-li ul, li ul {
+  }
+  li ul, li ul {
     margin-left: 24px;
-}
-p, ul, ol {
+  }
+  p, ul, ol {
     font-size: 16px;
     line-height: 24px;
     /*max-width: 540px;*/
-}
-pre {
+  }
+  pre {
     padding: 0px 24px;
     max-width: 800px;
     white-space: pre-wrap;
-}
-code {
+  }
+  code {
     font-family: Consolas, Monaco, Andale Mono, monospace;
     line-height: 1.5;
     font-size: 13px;
-}
-aside {
+  }
+  aside {
     display: block;
     float: right;
     width: 390px;
-}
-blockquote {
+  }
+  blockquote {
     border-left:.5em solid #eee;
     padding: 0 2em;
     margin-left:0;
     max-width: 476px;
-}
-blockquote  cite {
+  }
+  blockquote  cite {
     font-size:14px;
     line-height:20px;
     color:#bfbfbf;
-}
-blockquote cite:before {
+  }
+  blockquote cite:before {
     content: '\2014 \00A0';
-}
+  }
 
-blockquote p {  
+  blockquote p {  
     color: #666;
     max-width: 460px;
-}
-hr {
+  }
+  hr {
     width: 540px;
     text-align: left;
     margin: 0 auto 0 0;
     color: #999;
-}
+  }
 
-/* Code below this line is copyright Twitter Inc. */
+  /* Code below this line is copyright Twitter Inc. */
 
-button,
-input,
-select,
-textarea {
-  font-size: 100%;
-  margin: 0;
-  vertical-align: baseline;
-  *vertical-align: middle;
-}
-button, input {
-  line-height: normal;
-  *overflow: visible;
-}
-button::-moz-focus-inner, input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
-button,
-input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  cursor: pointer;
-  -webkit-appearance: button;
-}
-input[type=checkbox], input[type=radio] {
-  cursor: pointer;
-}
-/* override default chrome & firefox settings */
-input:not([type="image"]), textarea {
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-}
+  button,
+  input,
+  select,
+  textarea {
+    font-size: 100%;
+    margin: 0;
+    vertical-align: baseline;
+    *vertical-align: middle;
+  }
+  button, input {
+    line-height: normal;
+    *overflow: visible;
+  }
+  button::-moz-focus-inner, input::-moz-focus-inner {
+    border: 0;
+    padding: 0;
+  }
+  button,
+  input[type="button"],
+  input[type="reset"],
+  input[type="submit"] {
+    cursor: pointer;
+    -webkit-appearance: button;
+  }
+  input[type=checkbox], input[type=radio] {
+    cursor: pointer;
+  }
+  /* override default chrome & firefox settings */
+  input:not([type="image"]), textarea {
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+  }
 
-input[type="search"] {
-  -webkit-appearance: textfield;
-  -webkit-box-sizing: content-box;
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-}
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-label,
-input,
-select,
-textarea {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 13px;
-  font-weight: normal;
-  line-height: normal;
-  margin-bottom: 18px;
-}
-input[type=checkbox], input[type=radio] {
-  cursor: pointer;
-  margin-bottom: 0;
-}
-input[type=text],
-input[type=password],
-textarea,
-select {
-  display: inline-block;
-  width: 210px;
-  padding: 4px;
-  font-size: 13px;
-  font-weight: normal;
-  line-height: 18px;
-  height: 18px;
-  color: #808080;
-  border: 1px solid #ccc;
-  -webkit-border-radius: 3px;
-  -moz-border-radius: 3px;
-  border-radius: 3px;
-}
-select, input[type=file] {
-  height: 27px;
-  line-height: 27px;
-}
-textarea {
-  height: auto;
-}
+  input[type="search"] {
+    -webkit-appearance: textfield;
+    -webkit-box-sizing: content-box;
+    -moz-box-sizing: content-box;
+    box-sizing: content-box;
+  }
+  input[type="search"]::-webkit-search-decoration {
+    -webkit-appearance: none;
+  }
+  label,
+  input,
+  select,
+  textarea {
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 13px;
+    font-weight: normal;
+    line-height: normal;
+    margin-bottom: 18px;
+  }
+  input[type=checkbox], input[type=radio] {
+    cursor: pointer;
+    margin-bottom: 0;
+  }
+  input[type=text],
+  input[type=password],
+  textarea,
+  select {
+    display: inline-block;
+    width: 210px;
+    padding: 4px;
+    font-size: 13px;
+    font-weight: normal;
+    line-height: 18px;
+    height: 18px;
+    color: #808080;
+    border: 1px solid #ccc;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    border-radius: 3px;
+  }
+  select, input[type=file] {
+    height: 27px;
+    line-height: 27px;
+  }
+  textarea {
+    height: auto;
+  }
 
-/* grey out placeholders */
-:-moz-placeholder {
-  color: #bfbfbf;
-}
-::-webkit-input-placeholder {
-  color: #bfbfbf;
-}
+  /* grey out placeholders */
+  :-moz-placeholder {
+    color: #bfbfbf;
+  }
+  ::-webkit-input-placeholder {
+    color: #bfbfbf;
+  }
 
-input[type=text],
-input[type=password],
-select,
-textarea {
-  -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
-  -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
-  transition: border linear 0.2s, box-shadow linear 0.2s;
-  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-}
-input[type=text]:focus, input[type=password]:focus, textarea:focus {
-  outline: none;
-  border-color: rgba(82, 168, 236, 0.8);
-  -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
-  -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
-}
+  input[type=text],
+  input[type=password],
+  select,
+  textarea {
+    -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
+    -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
+    transition: border linear 0.2s, box-shadow linear 0.2s;
+    -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
+  }
+  input[type=text]:focus, input[type=password]:focus, textarea:focus {
+    outline: none;
+    border-color: rgba(82, 168, 236, 0.8);
+    -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+    -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
+  }
 
-/* buttons */
-button {
-  display: inline-block;
-  padding: 4px 14px;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
-  -webkit-border-radius: 4px;
-  -moz-border-radius: 4px;
-  border-radius: 4px;
-  -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-  background-color: #0064cd;
-  background-repeat: repeat-x;
-  background-image: -khtml-gradient(linear, left top, left bottom, from(#049cdb), to(#0064cd));
-  background-image: -moz-linear-gradient(top, #049cdb, #0064cd);
-  background-image: -ms-linear-gradient(top, #049cdb, #0064cd);
-  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #049cdb), color-stop(100%, #0064cd));
-  background-image: -webkit-linear-gradient(top, #049cdb, #0064cd);
-  background-image: -o-linear-gradient(top, #049cdb, #0064cd);
-  background-image: linear-gradient(top, #049cdb, #0064cd);
-  color: #fff;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  border: 1px solid #004b9a;
-  border-bottom-color: #003f81;
-  -webkit-transition: 0.1s linear all;
-  -moz-transition: 0.1s linear all;
-  transition: 0.1s linear all;
-  border-color: #0064cd #0064cd #003f81;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-}
-button:hover {
-  color: #fff;
-  background-position: 0 -15px;
-  text-decoration: none;
-}
-button:active {
-  -webkit-box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
-  box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
-}
-button::-moz-focus-inner {
-  padding: 0;
-  border: 0;
-}
+  /* buttons */
+  button {
+    display: inline-block;
+    padding: 4px 14px;
+    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
+    background-color: #0064cd;
+    background-repeat: repeat-x;
+    background-image: -khtml-gradient(linear, left top, left bottom, from(#049cdb), to(#0064cd));
+    background-image: -moz-linear-gradient(top, #049cdb, #0064cd);
+    background-image: -ms-linear-gradient(top, #049cdb, #0064cd);
+    background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #049cdb), color-stop(100%, #0064cd));
+    background-image: -webkit-linear-gradient(top, #049cdb, #0064cd);
+    background-image: -o-linear-gradient(top, #049cdb, #0064cd);
+    background-image: linear-gradient(top, #049cdb, #0064cd);
+    color: #fff;
+    text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+    border: 1px solid #004b9a;
+    border-bottom-color: #003f81;
+    -webkit-transition: 0.1s linear all;
+    -moz-transition: 0.1s linear all;
+    transition: 0.1s linear all;
+    border-color: #0064cd #0064cd #003f81;
+    border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  }
+  button:hover {
+    color: #fff;
+    background-position: 0 -15px;
+    text-decoration: none;
+  }
+  button:active {
+    -webkit-box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
+    -moz-box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
+    box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
+  }
+  button::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+  }
 
-.wrapper {
-  position: relative;
-  border: 1px solid black;
-  margin: 0 auto;
-  max-width: 540px;
-}
-nav {
-  padding: 0 0 18px 0;
-  border-bottom: 5px solid #fff001;
-  font-family: "Montserrat","Helvetica Neue", arial, sans-serif;
-  font-weight: 700;
-  font-size: 28px;
-}
-nav a:first-child {
-  padding-left: 0;
-}
-nav a {
-  padding: 6px;
-}
+  .wrapper {
+    position: relative;
+    border: 1px solid black;
+    margin: 0 auto;
+    max-width: 540px;
+  }
+  nav {
+    padding: 0 0 18px 0;
+    border-bottom: 5px solid #fff001;
+    font-family: "Montserrat","Helvetica Neue", arial, sans-serif;
+    font-weight: 700;
+    font-size: 28px;
+  }
+  nav a:first-child {
+    padding-left: 0;
+  }
+  nav a {
+    padding: 6px;
+  }
