upping design on elements, content edits and background images

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ body{
   background:
   url('../img/cctv-logo-dirty.png') 10px 15px no-repeat,
   url('../img/jack-cable.png') right 450px no-repeat, 
+  url('../img/speaker2.png') 80px 800px no-repeat, 
   url('../img/black_linen_v2.png') right top repeat;
 }
 h1, h2, h3, h4 {
