redsigning shows page

--- a/css/main.css
+++ b/css/main.css
@@ -95,7 +95,7 @@ pre {
   font-size: 20px;
   line-height: 1.5em;
   display: block;
-  font-family: "Montserrat", "Helvetica Neue", Georgia, Palatino, serif;
+  font-family: Courier, "Montserrat", "Helvetica Neue", Georgia, Palatino, serif;
   font-weight: 400;
   color: #aaa;
   line-height: 1.5;
